rwd & styles cleanup

--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,6 @@
 #root {
-  max-width: 1280px;
+  max-width: 90%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.card {
-  padding: 2em;
-}
-
-.currencies-row {
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-  p {
-    margin: 0;
-  } 
-}
-
-.currencies-column {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
 }
