--- a/src/pages/currencies/styles.css
+++ b/src/pages/currencies/styles.css
@@ -11,7 +11,18 @@ tbody tr:hover {
 table {
   border-collapse: collapse;
 }
+
 th {
   background-color: transparent;
   box-shadow: none;
+}
+th, td {
+  padding: 4px 16px;
+}
+
+@media (max-width: 600px) {
+  th, td {
+    font-size: 14px;
+    padding: 4px 8px;
+  }
 }
