--- a/src/pages/currencies/styles.css
+++ b/src/pages/currencies/styles.css
@@ -1,6 +1,8 @@
 tr {
   text-align: left;
+  text-transform: capitalize;
 }
+
 tbody tr:hover {
   cursor: pointer;
   background-color: #49e61051;
@@ -8,6 +10,7 @@ tbody tr:hover {
   box-shadow: 0px 0px 5px 5px #49e61051;
   border-radius: 2px;
 }
+
 table {
   border-collapse: collapse;
 }
@@ -16,6 +19,7 @@ th {
   background-color: transparent;
   box-shadow: none;
 }
+
 th, td {
   padding: 4px 16px;
 }
