--- a/src/pages/currency details/styles/CurrencyDetails.css
+++ b/src/pages/currency details/styles/CurrencyDetails.css
@@ -17,7 +17,13 @@ header {
 }
 
 .back-button {
-    height: max-content;
     font-size: 24px;
+    transition: ease-in-out 0.25s;
     text-decoration: none;
+    will-change: filter;
+}
+
+.back-button:hover {
+    cursor: pointer;
+    filter: brightness(200%);
 }
